# chatavd

./: .gitignore  .sesskey  Dockerfile  Procfile  README.md  avdrag.py  fly.toml  main.py  pyproject.toml
configdb/: chatavd-configs.sql  uploadconfigs.py
css/: output.css  package-lock.json  tailwind.config.js
db/: chroma.sqlite3
